<resources>
    <string name="app_name">FavMovies</string>
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="login">login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search ...</string>
    <string name="movie_search">Fav Movie Search</string>
    <string name="Title">Title</string>
    <string name="movie_year">Year</string>
    <string name="released">Released</string>
    <string name="runtime">Runtime</string>
    <string name="genre">Genre</string>
    <string name="imdb_rating">IMDB Rating</string>
    <string name="imdb_votes">Number of Votes</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="actors">Actors</string>
    <string name="country">Country</string>
    <string name="plot">Plot</string>
    <string name="language">Language</string>
    <string name="type">Type</string>
    <string name="search_dialog_title">Search Movie By Name</string>
    <string name="movie_name">Movie Name</string>
    <string name="search_btn">Search</string>
    <string name="warning_no_blank">Please do not leave blank input</string>
    <string name="cancel">cancel</string>
    <string name="search_results">Search Results</string>
    <string name="imdbid">imdbID</string>
    <string name="saved_movies">Saved Movies</string>
    <string name="auth_fail">Authentication failed.</string>
    <string name="welcome_back">Welcome back, </string>
    <string name="movie_deleted">Movie deleted from Fav list</string>
    <string name="moved_to_top">moved to top.</string>
    <string name="sort_by_title">Sort By Title</string>
</resources>
