<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MovieViewFragment"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/colorWhite">


    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        >

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/blank_profile" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/save_btn"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/color_cursor_white"
                        android:src="@android:drawable/btn_star_big_on" />

                    <ImageButton
                        android:id="@+id/remove_btn"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@drawable/color_cursor_white"
                        android:src="@android:drawable/btn_star_big_off" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/Title"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:background="@drawable/border"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="8dp"
                    android:layout_marginEnd="10dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/movie_year"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/movie_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:background="@drawable/border"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="8dp"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:padding="10dp"
                    android:text="@string/released"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:maxLines="1"/>
                <TextView
                    android:id="@+id/movie_released"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:background="@drawable/border"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="10dp"
                    android:padding="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/runtime"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/movie_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:background="@drawable/border"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="10dp"
                    android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/imdb_rating"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:background="@drawable/border"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="10dp"
                    android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/imdb_votes"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/movie_votes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:background="@drawable/border"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="10dp"
                    android:padding="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/director"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/movie_director"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:background="@drawable/border"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="10dp"
                    android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/writer"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/movie_writer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:background="@drawable/border"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="10dp"
                    android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/actors"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/movie_actors"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:background="@drawable/border"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="10dp"
                    android:padding="8dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/country"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/movie_country"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:background="@drawable/border"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="10dp"
                    android:padding="8dp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/plot"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/movie_plot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:background="@drawable/border"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="10dp"
                    android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/language"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/movie_language"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:background="@drawable/border"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="10dp"
                    android:padding="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/type"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:padding="10dp"/>
                <TextView
                    android:id="@+id/movie_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text=""
                    android:background="@drawable/border"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="10dp"
                    android:padding="8dp"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
